--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,37 +4,32 @@
   tasks:
 
 
-  - name: Update Repo Index
-    apt:
-            update_cache: yes    
-    when: ansible_distribution in ["Ubuntu","debian"]        
+          # - name: Update Repo Index
+          #apt:
+          #         update_cache: yes    
+          #when: ansible_distribution in ["Ubuntu","debian"]        
 
-  - name: Update Repo Index
-    dnf:
-          update_cache: yes
-    when: ansible_distribution == "CentOS"    
+          #- name: Update Repo Index
+          #dnf:
+          #update_cache: yes
+          #when: ansible_distribution == "CentOS"    
 
-
-  - name: Install Apache2 Package
-    apt:
-        name: apache2
+  - name: Install Apache and PHP Packages 
+    #apt:
+    package:        
+        name: 
+        - "{{ apache_package }}"
+        - "{{ php_package }}" 
         state: latest
-    when: ansible_distribution == "Ubuntu"     
+        update_cache: yes
+        #when: ansible_distribution == "Ubuntu"     
    
-  - name: Add PHP support fot apache    
-    apt:
-         name: libapache2-mod-php
-         state: latest
-    when: ansible_distribution == "Ubuntu"     
 
-  - name: Install Apache2 Package
-    dnf:
-         name: httpd
-         state: latest
-    when: ansible_distribution == "CentOS"    
-
-  - name: Install Apache2 Package
-    dnf:
-         name: php
-         state: latest
-    when: ansible_distribution == "CentOS"    
+        #- name: Install Apache2 Package for CentOS
+        #dnf:
+        #name: 
+        #- httpd
+        #- php  
+        #state: latest
+        #update_cache: yes
+        #when: ansible_distribution == "CentOS"    
